# tsmm-homework

./: .clang-format  .gitignore  CMakeLists-CrossCompiling.txt  CMakeLists.txt  README.md  make-debug.sh  make-release.sh  test-func.sh  test-perf.sh
include/: definitions.h  dispatcher.hpp  matmul.hpp  matrix.hpp  perf.h  test.h  types.h  utils.h
include/core/: generic.hpp  kernel_base.hpp  matmul.h  optimized.hpp  pack.h
include/core/kernels/: 144x144x144.hpp  32x16000x16.hpp  32x16x16000.hpp  4000x128x16000.hpp  4000x16000x128.hpp  8x16000x16.hpp  8x16x16000.hpp
src/: benchmark.cpp  matmul.cpp  utils.c
src/core/: matmul.c  pack.c
src/core/kernels/: 144x144x144.cpp  32x16000x16.cpp  32x16x16000.cpp  4000x128x16000.cpp  4000x16000x128.cpp  8x16000x16.cpp  8x16x16000.cpp
test/data/: gen.py  pack.inc
test/tests/: CMakeLists.txt  analyse_policy.cpp  ext_mkl.cpp  func_kernel_32x16000x16.cpp  func_kernel_32x16x16000.cpp  func_kernel_4000x128x16000.cpp  func_kernel_4000x16000x128.cpp  func_kernel_8x16000x16.cpp  func_kernel_8x16x16000.cpp  func_matmul_block.cpp  func_pack.cpp  make_mkl.cpp  perf_4kx16kx128.cpp  perf_matmul.hpp  perf_matmul_144x144x144.cpp  perf_matmul_32x16kx16.cpp  perf_matmul_32x16x16k.cpp  perf_matmul_4kx128x16k.cpp  perf_matmul_4kx16kx128.cpp  perf_matmul_8x16kx16.cpp  perf_matmul_8x16x16k.cpp  perf_pack_144x144x144.cpp  perf_pack_4kx128x16k.cpp  perf_pack_4kx16kx128.cpp  perf_submatmul_4kx128x16k.cpp  perf_submatmul_4kx16kx128.cpp  sfunc_kernel_144x144x144.cpp
tests/data/: gen.py
